syntax = "proto3";

package scyna;
option java_package = "io.scyna.proto";
option java_multiple_files = true;

option optimize_for = CODE_SIZE;
option go_package = ".;scyna";

message Request 
{
  uint64 TraceID = 1;
  bytes Body = 2;
  string Data = 4;
  bool JSON = 3;
}

message Response 
{
  int32 Code = 1;
  bytes Body = 2;
  uint64 SessionID = 3;
  string Token = 4;
  uint64 Expired = 5;
}

message EventOrSignal
{
  uint64 ParentID = 1;
  bytes Body = 2;
  string Data = 3;
}

message ServiceTag
{
  uint32 Status = 1;
  string Request = 2;
  string Response = 3;
}
